--- a/ParticleFilter_SLAM.vcxproj
+++ b/ParticleFilter_SLAM.vcxproj
@@ -91,7 +91,9 @@
     <ClInclude Include="kernels.cuh" />
     <ClInclude Include="test_kernels.h" />
     <ClInclude Include="test_map.h" />
+    <ClInclude Include="test_map_extend.h" />
     <ClInclude Include="test_map_partials.h" />
+    <ClInclude Include="test_robot_advance.h" />
     <ClInclude Include="test_robot_particles.h" />
     <ClInclude Include="test_robot_particles_partials.h" />
   </ItemGroup>
