--- a/ParticleFilter_SLAM.vcxproj
+++ b/ParticleFilter_SLAM.vcxproj
@@ -96,10 +96,10 @@
     <ClInclude Include="kernels_robot.cuh" />
     <ClInclude Include="kernels_utils.cuh" />
     <ClInclude Include="test_kernels.h" />
-    <ClInclude Include="test_map_extend.h" />
-    <ClInclude Include="test_map_partials.h" />
+    <ClInclude Include="test_map.h" />
     <ClInclude Include="test_robot_advance.h" />
     <ClInclude Include="test_robot_particles.h" />
+    <ClInclude Include="test_run.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
