Add 'test_robot_advance' to 'test_run'

--- a/ParticleFilter_SLAM.vcxproj
+++ b/ParticleFilter_SLAM.vcxproj
@@ -98,7 +98,7 @@
     <ClInclude Include="test_kernels.h" />
     <ClInclude Include="test_map.h" />
     <ClInclude Include="test_robot_advance.h" />
-    <ClInclude Include="test_robot_particles.h" />
+    <ClInclude Include="test_robot.h" />
     <ClInclude Include="test_run.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
