--- a/ParticleFilter_SLAM.vcxproj
+++ b/ParticleFilter_SLAM.vcxproj
@@ -100,9 +100,10 @@
     <ClInclude Include="test_map.h" />
     <ClInclude Include="test_map_extend.h" />
     <ClInclude Include="test_robot_extend.h" />
-    <ClInclude Include="test_robot_advance.h" />
+    <ClInclude Include="test_robot_move.h" />
     <ClInclude Include="test_robot.h" />
     <ClInclude Include="test_iteration.h" />
+    <ClInclude Include="test_robot_move_extend.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
