--- a/ParticleFilter_SLAM.vcxproj
+++ b/ParticleFilter_SLAM.vcxproj
@@ -176,9 +176,12 @@
     <CudaCompile Include="main.cu" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="camera.h" />
-    <ClInclude Include="draw.h" />
-    <ClInclude Include="draw_utils.h" />
+    <ClInclude Include="device_assert_map.h" />
+    <ClInclude Include="device_exec_map.h" />
+    <ClInclude Include="device_init_map.h" />
+    <ClInclude Include="gl_camera.h" />
+    <ClInclude Include="gl_draw.h" />
+    <ClInclude Include="gl_draw_utils.h" />
     <ClInclude Include="headers.h" />
     <ClInclude Include="host_asserts.h" />
     <ClInclude Include="host_utils.h" />
@@ -186,29 +189,28 @@
     <ClInclude Include="kernels_map.cuh" />
     <ClInclude Include="kernels_robot.cuh" />
     <ClInclude Include="kernels_utils.cuh" />
-    <ClInclude Include="light.h" />
-    <ClInclude Include="mesh.h" />
+    <ClInclude Include="gl_light.h" />
+    <ClInclude Include="gl_mesh.h" />
     <ClInclude Include="run_kernels.h" />
-    <ClInclude Include="shader.h" />
+    <ClInclude Include="gl_shader.h" />
     <ClInclude Include="structures.h" />
     <ClInclude Include="test_iteration_multi.h" />
     <ClInclude Include="test_kernels.h" />
     <ClInclude Include="test_map.h" />
     <ClInclude Include="test_map_extend.h" />
-    <ClInclude Include="test_modular_map.h" />
     <ClInclude Include="test_robot_extend.h" />
     <ClInclude Include="test_robot_move.h" />
     <ClInclude Include="test_robot.h" />
     <ClInclude Include="test_iteration.h" />
     <ClInclude Include="test_robot_move_extend.h" />
-    <ClInclude Include="window.h" />
+    <ClInclude Include="gl_window.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="camera.cpp" />
-    <ClCompile Include="light.cpp" />
-    <ClCompile Include="mesh.cpp" />
-    <ClCompile Include="shader.cpp" />
-    <ClCompile Include="window.cpp" />
+    <ClCompile Include="gl_camera.cpp" />
+    <ClCompile Include="gl_light.cpp" />
+    <ClCompile Include="gl_mesh.cpp" />
+    <ClCompile Include="gl_shader.cpp" />
+    <ClCompile Include="gl_window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
