Add thrust library to robot_test

--- a/ParticleFilter_SLAM.vcxproj
+++ b/ParticleFilter_SLAM.vcxproj
@@ -177,8 +177,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="device_assert_map.h" />
+    <ClInclude Include="device_assert_robot.h" />
     <ClInclude Include="device_exec_map.h" />
+    <ClInclude Include="device_exec_robot.h" />
     <ClInclude Include="device_init_map.h" />
+    <ClInclude Include="device_init_robot.h" />
     <ClInclude Include="gl_camera.h" />
     <ClInclude Include="gl_draw.h" />
     <ClInclude Include="gl_draw_utils.h" />
