--- a/ParticleFilter_SLAM.vcxproj
+++ b/ParticleFilter_SLAM.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="gl_draw_utils.h" />
     <ClInclude Include="headers.h" />
     <ClInclude Include="host_asserts.h" />
+    <ClInclude Include="host_check.h" />
     <ClInclude Include="host_utils.h" />
     <ClInclude Include="kernels.cuh" />
     <ClInclude Include="kernels_map.cuh" />
