Fix .gitignore for GLEW library

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ TODO.txt
 data/*
 data_test/*
 
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -22,9 +23,9 @@ mono_crash.*
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
+[Rr]elease/**
 [Rr]eleases/
-x64/
+x64/**
 x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
@@ -399,3 +400,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+#!External_Libs/GLEW/lib/Release/x64/glew32.lib
